src/objects/Try_In_Notes_Form__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Try In Notes Forms</relationshipLabel>
        <relationshipName>Try_In_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Try In Notes Forms</relationshipLabel>
        <relationshipName>Try_In_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Try In Notes Forms</relationshipLabel>
        <relationshipName>Try_In_Notes_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Try_In_Type__c</fullName>
        <label>Try In Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wax</fullName>
                </value>
                <value>
                    <fullName>Wax/Bar</fullName>
                </value>
                <value>
                    <fullName>Bar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Try In Notes Form</label>
    <nameField>
        <displayFormat>TIN-{0000}</displayFormat>
        <label>Try In Notes Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Try In Notes Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>